--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@types/tailwindcss": "^3.1.0",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
@@ -11,5 +12,9 @@
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
+  },
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "webpack"
   }
 }
